- remove jacoco, wait for upgrade