@@ -83,7 +83,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.11.0</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
                     <compilerArgs>--enable-preview</compilerArgs>
@@ -94,11 +94,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>3.0.0</version>
                 <configuration>
-                    <reuseForks>true</reuseForks>
+                    <!--<reuseForks>true</reuseForks>-->
                     <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${argLine} --enable-preview --add-modules=jdk.incubator.vector</argLine>
+                    <!--
+                    <argLine>${argLine} - -enable-preview - -add-modules=jdk.incubator.vector</argLine>
+                    -->
                 </configuration>
             </plugin>
             <!--
